Home page 90% completed with floating nav bar, page jump, javascript enqueue fixed, style enqueue still not working`

--- a/wp-content/themes/tyntrevive/style.css
+++ b/wp-content/themes/tyntrevive/style.css
@@ -25,72 +25,3 @@ along with Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normali
 and Blueprint http://www.blueprintcss.org/
 */
 
-.page-id-57 .site-branding {
-margin-top: 120px;
-}
-
-#social-icons {
-display: none;
-}
-
-.page-id-57 #social-icons {
-display: block;
-}
-
-#search-icon {
-display: none;
-}
-
-.blog #search-icon {
-display: block;
-}
-
-.site-branding {
-    margin-bottom: 40px;
-    padding:0px;
-}
-
-#masthead {
-background-position-y: center;
-}
-
-.mega-container {
-    max-width: 1440px;
-}
-
-@media (min-width: 1450px){
-.container {
-    width: 1440px;
-}
-}
-
-.comment-author {
-    width: 8%;
-}
-
-.page-id-57 #top-bar {
-display: none;
-}
-
-.page-id-57 .mega-container {
-display: none;
-}
-
-.page-id-57 #site-navigation {
-display: none;
-}
-
-.page-id-57 #masthead {
-min-height: 640px;
-}
-
-#site-passwd-form {
-margin-top:36px;
-display: none;
-}
-
-.page-id-57 #site-passwd-form {
-display: block;
-}
-
-
